--- a/tutorials/session3/session3-part1.ipynb
+++ b/tutorials/session3/session3-part1.ipynb
@@ -64,31 +64,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a0e5a65-ca8b-44b9-8d00-31bd3fa78fde",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
-   "source": [
-    "## Creating a conda environment for data visualization\n",
-    "You can run the following cell or create the conda environment via a terminal window."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5616032a-6078-43a8-b122-79fed96e90ba",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%bash\n",
-    "conda create -n deepretinotopy_2 python=3.8 ipykernel\n",
-    "conda activate deepretinotopy\n",
-    "\n",
-    "pip install -r requirements.txt;"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "16115962-a02c-4d6c-8358-b811663bf6c4",
    "metadata": {},
    "source": [
@@ -97,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "31924080-4dc9-4f84-9fc3-326d8897db2f",
    "metadata": {},
    "outputs": [],
@@ -122,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "13d78db0-96c9-493d-afe0-216e06806c12",
    "metadata": {},
    "outputs": [
@@ -130,8 +105,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "vendor_id\t: AuthenticAMD\n",
-      "model name\t: AMD EPYC-Rome Processor\n"
+      "vendor_id\t: GenuineIntel\n",
+      "model name\t: Intel(R) Xeon(R) Platinum 8488C\n"
      ]
     }
    ],
@@ -151,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "d19ef18c-bebd-4e68-a3bf-659e72433fb7",
    "metadata": {},
    "outputs": [
@@ -161,7 +136,7 @@
        "['deepretinotopy/1.0.2']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "dca5343e-2a0b-434d-95ba-d417a1184907",
    "metadata": {},
    "outputs": [
@@ -184,24 +159,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "tee: deepRetinotopy_output.log: Read-only file system\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Path subs directory: /home/jovyan/data/\n",
-      "Path to fs_LR-deformed_to-fsaverage surfaces: /home/jovyan/templates/\n",
-      "Dataset name: hcp\n",
-      "Maps: polarAngle\n",
-      "Generating mid-thickness surface and curvature data...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "tee: deepRetinotopy_output.log: Read-only file system\n",
       "tee: deepRetinotopy_error.log: Read-only file system\n"
      ]
     },
@@ -209,7 +167,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Path: /home/jovyan/data/\n",
+      "Path subs directory: /home/jovyan/shared/tmp/data/\n",
+      "Path to fs_LR-deformed_to-fsaverage surfaces: /home/jovyan/shared/templates/\n",
+      "Dataset name: hcp\n",
+      "Maps: polarAngle\n",
+      "Generating mid-thickness surface and curvature data...\n",
+      "Path: /home/jovyan/shared/tmp/data/\n",
       "Hemisphere: lh\n",
       "Subject: 102311\n",
       "Generating mid-thickness surface and curvature data if not available...\n",
@@ -234,96 +197,69 @@
       "Processing...\n",
       "Done!\n",
       "Dataset loaded\n",
-      "Time elapsed: 0.5105423666536808 minutes\n",
+      "Time elapsed: 0.25137122347950935 minutes\n",
       "Loading model 1\n",
-      "Saving .gii files in: /home/jovyan/data/102311/deepRetinotopy/\n",
+      "Saving .gii files in: /home/jovyan/shared/tmp/data/102311/deepRetinotopy/\n",
       "Predictions from model 1 were saved\n",
-      "Time elapsed: 5.247529104351997 minutes\n",
+      "Time elapsed: 2.083622109144926 minutes\n",
       "Loading model 2\n",
-      "Saving .gii files in: /home/jovyan/data/102311/deepRetinotopy/\n",
+      "Saving .gii files in: /home/jovyan/shared/tmp/data/102311/deepRetinotopy/\n",
       "Predictions from model 2 were saved\n",
-      "Time elapsed: 5.431513167917728 minutes\n",
+      "Time elapsed: 1.975775245577097 minutes\n",
       "Loading model 3\n",
-      "Saving .gii files in: /home/jovyan/data/102311/deepRetinotopy/\n",
+      "Saving .gii files in: /home/jovyan/shared/tmp/data/102311/deepRetinotopy/\n",
       "Predictions from model 3 were saved\n",
-      "Time elapsed: 5.80756638199091 minutes\n",
+      "Time elapsed: 1.9812879040837288 minutes\n",
       "Loading model 4\n",
-      "Saving .gii files in: /home/jovyan/data/102311/deepRetinotopy/\n",
+      "Saving .gii files in: /home/jovyan/shared/tmp/data/102311/deepRetinotopy/\n",
       "Predictions from model 4 were saved\n",
-      "Time elapsed: 5.306253969669342 minutes\n",
+      "Time elapsed: 1.9930103346705437 minutes\n",
       "Loading model 5\n",
-      "Saving .gii files in: /home/jovyan/data/102311/deepRetinotopy/\n",
+      "Saving .gii files in: /home/jovyan/shared/tmp/data/102311/deepRetinotopy/\n",
       "Predictions from model 5 were saved\n",
-      "Time elapsed: 5.170940432697535 minutes\n",
+      "Time elapsed: 1.9813480041921139 minutes\n",
       "Saving average predictions\n",
       "Average predictions were saved\n",
       "Resampling predictions to native space...\n",
-      "Path: /home/jovyan/data/\n",
+      "Path: /home/jovyan/shared/tmp/data/\n",
       "Hemisphere: lh\n",
       "Map: polarAngle\n",
       "Model: model1\n",
       "Resampling fsaverage to native space...\n",
-      "Path: /home/jovyan/data/\n",
+      "Path: /home/jovyan/shared/tmp/data/\n",
       "Hemisphere: lh\n",
       "Map: polarAngle\n",
       "Model: model2\n",
       "Resampling fsaverage to native space...\n",
-      "Path: /home/jovyan/data/\n",
+      "Path: /home/jovyan/shared/tmp/data/\n",
       "Hemisphere: lh\n",
       "Map: polarAngle\n",
       "Model: model3\n",
       "Resampling fsaverage to native space...\n",
-      "Path: /home/jovyan/data/\n",
+      "Path: /home/jovyan/shared/tmp/data/\n",
       "Hemisphere: lh\n",
       "Map: polarAngle\n",
       "Model: model4\n",
       "Resampling fsaverage to native space...\n",
-      "Path: /home/jovyan/data/\n",
+      "Path: /home/jovyan/shared/tmp/data/\n",
       "Hemisphere: lh\n",
       "Map: polarAngle\n",
       "Model: model5\n",
       "Resampling fsaverage to native space...\n",
-      "Path: /home/jovyan/data/\n",
+      "Path: /home/jovyan/shared/tmp/data/\n",
       "Hemisphere: lh\n",
       "Map: polarAngle\n",
       "Model: average\n",
       "Resampling fsaverage to native space...\n",
       "polarAngle predictions for lh are done!\n",
       "Generating mid-thickness surface and curvature data...\n",
-      "Path: /home/jovyan/data/\n",
+      "Path: /home/jovyan/shared/tmp/data/\n",
       "Hemisphere: rh\n",
       "Subject: 102311\n",
       "Generating mid-thickness surface and curvature data if not available...\n",
       "Preparing native surfaces for resampling if not available...\n",
       "Execution time: 0 minutes\n",
-      "Retinotopy prediction...\n",
-      "Loading the dataset\n",
-      "Processing...\n",
-      "Done!\n",
-      "Dataset loaded\n",
-      "Time elapsed: 0.5065809302031994 minutes\n",
-      "Loading model 1\n",
-      "Saving .gii files in: /home/jovyan/data/102311/deepRetinotopy/\n",
-      "Predictions from model 1 were saved\n",
-      "Time elapsed: 5.280241388827562 minutes\n",
-      "Loading model 2\n",
-      "Saving .gii files in: /home/jovyan/data/102311/deepRetinotopy/\n",
-      "Predictions from model 2 were saved\n",
-      "Time elapsed: 5.0784182995557785 minutes\n",
-      "Loading model 3\n",
-      "Saving .gii files in: /home/jovyan/data/102311/deepRetinotopy/\n",
-      "Predictions from model 3 were saved\n",
-      "Time elapsed: 5.1741608902812 minutes\n",
-      "Loading model 4\n",
-      "Saving .gii files in: /home/jovyan/data/102311/deepRetinotopy/\n",
-      "Predictions from model 4 were saved\n",
-      "Time elapsed: 4.933720454573631 minutes\n",
-      "Loading model 5\n",
-      "Saving .gii files in: /home/jovyan/data/102311/deepRetinotopy/\n",
-      "Predictions from model 5 were saved\n",
-      "Time elapsed: 5.085330028086901 minutes\n",
-      "Saving average predictions\n",
-      "Average predictions were saved\n"
+      "Retinotopy prediction...\n"
      ]
     },
     {
@@ -338,33 +274,60 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Loading the dataset\n",
+      "Processing...\n",
+      "Done!\n",
+      "Dataset loaded\n",
+      "Time elapsed: 0.2473652996122837 minutes\n",
+      "Loading model 1\n",
+      "Saving .gii files in: /home/jovyan/shared/tmp/data/102311/deepRetinotopy/\n",
+      "Predictions from model 1 were saved\n",
+      "Time elapsed: 2.1462337113916874 minutes\n",
+      "Loading model 2\n",
+      "Saving .gii files in: /home/jovyan/shared/tmp/data/102311/deepRetinotopy/\n",
+      "Predictions from model 2 were saved\n",
+      "Time elapsed: 2.0201983489096165 minutes\n",
+      "Loading model 3\n",
+      "Saving .gii files in: /home/jovyan/shared/tmp/data/102311/deepRetinotopy/\n",
+      "Predictions from model 3 were saved\n",
+      "Time elapsed: 2.00690059363842 minutes\n",
+      "Loading model 4\n",
+      "Saving .gii files in: /home/jovyan/shared/tmp/data/102311/deepRetinotopy/\n",
+      "Predictions from model 4 were saved\n",
+      "Time elapsed: 2.0047450847923756 minutes\n",
+      "Loading model 5\n",
+      "Saving .gii files in: /home/jovyan/shared/tmp/data/102311/deepRetinotopy/\n",
+      "Predictions from model 5 were saved\n",
+      "Time elapsed: 2.0041306652128696 minutes\n",
+      "Saving average predictions\n",
+      "Average predictions were saved\n",
       "Resampling predictions to native space...\n",
-      "Path: /home/jovyan/data/\n",
+      "Path: /home/jovyan/shared/tmp/data/\n",
       "Hemisphere: rh\n",
       "Map: polarAngle\n",
       "Model: model1\n",
       "Resampling fsaverage to native space...\n",
-      "Path: /home/jovyan/data/\n",
+      "Path: /home/jovyan/shared/tmp/data/\n",
       "Hemisphere: rh\n",
       "Map: polarAngle\n",
       "Model: model2\n",
       "Resampling fsaverage to native space...\n",
-      "Path: /home/jovyan/data/\n",
+      "Path: /home/jovyan/shared/tmp/data/\n",
       "Hemisphere: rh\n",
       "Map: polarAngle\n",
       "Model: model3\n",
       "Resampling fsaverage to native space...\n",
-      "Path: /home/jovyan/data/\n",
+      "Path: /home/jovyan/shared/tmp/data/\n",
       "Hemisphere: rh\n",
       "Map: polarAngle\n",
       "Model: model4\n",
       "Resampling fsaverage to native space...\n",
-      "Path: /home/jovyan/data/\n",
+      "Path: /home/jovyan/shared/tmp/data/\n",
       "Hemisphere: rh\n",
       "Map: polarAngle\n",
       "Model: model5\n",
       "Resampling fsaverage to native space...\n",
-      "Path: /home/jovyan/data/\n",
+      "Path: /home/jovyan/shared/tmp/data/\n",
       "Hemisphere: rh\n",
       "Map: polarAngle\n",
       "Model: average\n",
@@ -375,11 +338,41 @@
     }
    ],
    "source": [
-    "# generate polar angle maps\n",
     "%%bash\n",
     "date_tag=20231223\n",
     "cd /cvmfs/neurodesk.ardc.edu.au/containers/deepretinotopy_1.0.2_\"$date_tag\"/deepretinotopy_1.0.2_$date_tag.simg/opt/deepRetinotopy_TheToolbox/\n",
-    "bash deepRetinotopy.sh -s /home/jovyan/data/ -t /home/jovyan/templates/ -d hcp -m \"polarAngle\""
+    "bash deepRetinotopy.sh -s /home/jovyan/shared/tmp/data/ -t /home/jovyan/shared/templates/ -d hcp -m \"polarAngle\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1a0e5a65-ca8b-44b9-8d00-31bd3fa78fde",
+   "metadata": {},
+   "source": [
+    "## Creating a conda environment for data visualization\n",
+    "You can run the following cell or create the conda environment via a terminal window."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5616032a-6078-43a8-b122-79fed96e90ba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "conda create -n deepretinotopy python=3.8 ipykernel\n",
+    "conda activate deepretinotopy\n",
+    "\n",
+    "pip install -r requirements.txt;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f84a029f-91ca-4683-a8a6-7eb9b5284693",
+   "metadata": {},
+   "source": [
+    "Now, we have to change the kernel and choose the deepretinotopy one. The notebook will be restarted but you don't need to rerun the previous cells, just the ones bellow."
    ]
   },
   {
@@ -411,14 +404,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "7723b2ac-4291-478d-8e2b-3b241197a7d6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "105c195f064a409185cd559138fa2b8e",
+       "model_id": "7e465a5223e1488ab00a2342ddbce037",
        "version_major": 2,
        "version_minor": 0
       },
@@ -437,7 +430,7 @@
     "\n",
     "@interact(prediction = prediction, binarize = binarize)\n",
     "def plot1(prediction, binarize):\n",
-    "    return polarAngle_plot(subject_id, '/home/jovyan/data', '/home/jovyan/templates', prediction = prediction, binarize = binarize)"
+    "    return polarAngle_plot(subject_id, '/home/jovyan/shared/tmp//data', '/home/jovyan/shared/templates', prediction = prediction, binarize = binarize)"
    ]
   },
   {
