--- a/tutorials/session3/session3-part1.ipynb
+++ b/tutorials/session3/session3-part1.ipynb
@@ -355,16 +355,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "5616032a-6078-43a8-b122-79fed96e90ba",
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%bash\n",
-    "conda create -n deepretinotopy python=3.8 ipykernel\n",
-    "conda activate deepretinotopy\n",
+    "# %%bash\n",
+    "# conda create -n deepretinotopy python=3.8 ipykernel -y\n",
+    "# conda activate deepretinotopy\n",
     "\n",
-    "pip install -r requirements.txt;"
+    "# pip install -r requirements.txt;"
    ]
   },
   {
@@ -372,7 +372,7 @@
    "id": "f84a029f-91ca-4683-a8a6-7eb9b5284693",
    "metadata": {},
    "source": [
-    "Now, we have to change the kernel and choose the deepretinotopy one. The notebook will be restarted but you don't need to rerun the previous cells, just the ones bellow."
+    "Now, we have to  switch conda environments and select the 'deepRetinotopy' one. The notebook will be restarted, but you don't need to rerun the previous cells, just the ones below."
    ]
   },
   {
@@ -404,14 +404,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "7723b2ac-4291-478d-8e2b-3b241197a7d6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7e465a5223e1488ab00a2342ddbce037",
+       "model_id": "51cedcdf11b94d369199a09a249380ac",
        "version_major": 2,
        "version_minor": 0
       },
