--- a/tutorials/session3/session3-part1.ipynb
+++ b/tutorials/session3/session3-part1.ipynb
@@ -152,6 +152,24 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "2ecf0235-29c4-44fa-965c-1afc14fc3f7f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/cvmfs/neurodesk.ardc.edu.au/containers/deepretinotopy_1.0.2_20231223/python\n"
+     ]
+    }
+   ],
+   "source": [
+    "!which python"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "dca5343e-2a0b-434d-95ba-d417a1184907",
    "metadata": {},
    "outputs": [
@@ -341,96 +359,11 @@
     "%%bash\n",
     "date_tag=20231223\n",
     "cd /cvmfs/neurodesk.ardc.edu.au/containers/deepretinotopy_1.0.2_\"$date_tag\"/deepretinotopy_1.0.2_$date_tag.simg/opt/deepRetinotopy_TheToolbox/\n",
-    "bash deepRetinotopy.sh -s /home/jovyan/shared/tmp/data/ -t /home/jovyan/shared/templates/ -d hcp -m \"polarAngle\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1a0e5a65-ca8b-44b9-8d00-31bd3fa78fde",
-   "metadata": {},
-   "source": [
-    "## Creating a conda environment for data visualization\n",
-    "You can run the following cell or create the conda environment via a terminal window."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "5616032a-6078-43a8-b122-79fed96e90ba",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# %%bash\n",
-    "# conda create -n deepretinotopy python=3.8 ipykernel -y\n",
-    "# conda activate deepretinotopy\n",
-    "\n",
-    "# pip install -r requirements.txt;"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f84a029f-91ca-4683-a8a6-7eb9b5284693",
-   "metadata": {},
-   "source": [
-    "Now, we have to  switch conda environments and select the 'deepRetinotopy' one. The notebook will be restarted, but you don't need to rerun the previous cells, just the ones below."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "516b89b2-987a-40c7-879a-e9243d548e51",
-   "metadata": {},
-   "source": [
-    "## Visualization"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "43ebfb90-ec7e-46d8-9132-79ff1b3727e9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# imports\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import random\n",
-    "import sys\n",
-    "\n",
-    "sys.path.append('.')\n",
-    "\n",
-    "from functions.visualization import polarAngle_plot\n",
-    "from ipywidgets import interact, Dropdown"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "7723b2ac-4291-478d-8e2b-3b241197a7d6",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "51cedcdf11b94d369199a09a249380ac",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(Dropdown(description='prediction', options=('average', 'model1', 'model2', 'model3', 'mo…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "subject_id=str(102311)\n",
-    "prediction = Dropdown(options = ['average','model1', 'model2', 'model3', 'model4', 'model5'])\n",
-    "binarize = Dropdown(options = [False, True])\n",
-    "\n",
-    "@interact(prediction = prediction, binarize = binarize)\n",
-    "def plot1(prediction, binarize):\n",
-    "    return polarAngle_plot(subject_id, '/home/jovyan/shared/tmp//data', '/home/jovyan/shared/templates', prediction = prediction, binarize = binarize)"
+    "bash deepRetinotopy.sh \\\n",
+    "    -s /home/jovyan/shared/tmp/data/ \\\n",
+    "    -t /home/jovyan/shared/templates/ \\\n",
+    "    -d hcp \\\n",
+    "    -m \"polarAngle\""
    ]
   },
   {
