tweaks to workflow

--- a/tutorials/session2/workflow.ipynb
+++ b/tutorials/session2/workflow.ipynb
@@ -71,7 +71,7 @@
     "#### Obtaining the Dataset\n",
     "**You can skip these steps if you are running this notebook in the virtual Neurodesk instance set up for the VSS Workshop.** During the workshop, the NYU Retinotopy Dataset will be downloaded ahead of time and will be available in the directory `/home/jovyan/shared/lec-02/data/NYU_full`. If you are running this notebook in another environment (such as on your own computer), you will need to make sure that the dataset is downloaded ahead of time. To ensure the dataset is downloaded, you will need to run the following commands (you will need to copy-paste these into new cells and run them).\n",
     "\n",
-    "First, run the following shell-commands to install tools for downloading data from OpenNeuro:\n",
+    "First, run the following shell-commands to install tools for downloading data from OpenNeuro. You will need to copy-and-paste these code blocks into Jupyter cells to run them:\n",
     "```bash\n",
     "%%bash\n",
     "\n",
@@ -99,19 +99,18 @@
     "dest_path = Path(\n",
     "    '/home/jovyan/shared/lec-02/data/step0_raw')\n",
     "print(\"Downloading files:\")\n",
-    "for subpath in dataset_path.iterdir():\n",
-    "    # We skip the derivatives directory.\n",
-    "    if subpath.name == 'derivatives':\n",
-    "        continue\n",
-    "    print(f\" * {subpath.name} ...\")\n",
-    "    subpath.download_to(dest_path / subpath.name)\n",
+    "print(\"Downloading files for sub-wlsubj001...\")\n",
+    "subpath = data_path / 'sub-wlsubj001'\n",
+    "subpath.download_to(dest_path / 'sub-wlsubj001')\n",
     "# Also download the stimulus (all subjects / sessions are the same):\n",
     "stim_path = data_path / 'derivatives' / 'stimulus_apertures'\n",
     "stim_path = stim_path / 'sub-wlsubj001' / 'ses-nyu3t01'\n",
     "stim_path = stim_path / 'sub-wlsubj001_ses-nyu3t01_task-prf_apertures.nii.gz'\n",
     "stim_path.download_to(\n",
     "    '/home/jovyan/shared/lec-02/data/stimulus/task-prf_apertures.nii.gz')\n",
-    "```"
+    "```\n",
+    "\n",
+    "Finally, you will need to upload a license file for FreeSurfer to your home directory and name it `fslicense`. This is only needed if you intend to run fMRIprep. You can upload the file by dragging it into the file browser menu of JupyterLab while you are viewing your home directory. More information on obtaining a license file is below in the first code cell."
    ]
   },
   {
